force-app/main/default/objects/LLC_BI__Real_Estate_Property_Details__c/fields/LLC_BI__Construction_Class__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Construction_Class__c</fullName>
    <description>Users or an integration manually populate this picklist field to identify a property’s construction class type for a real estate collateral record.</description>
    <inlineHelpText>Select the property’s construction class type from the picklist.</inlineHelpText>
    <label>Construction Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Average/ Standard Builders Grade</fullName>
            </value>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Custom/ Luxury</fullName>
            </value>
            <value>
                <fullName>Designer</fullName>
            </value>
            <value>
                <fullName>Economy</fullName>
            </value>
            <value>
                <fullName>Economy/Standard</fullName>
            </value>
            <value>
                <fullName>Luxury</fullName>
            </value>
            <value>
                <fullName>Minimum</fullName>
            </value>
            <value>
                <fullName>Standard/Custom</fullName>
            </value>
            <value>
                <fullName>Superior</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>