force-app/main/default/objects/LLC_BI__Real_Estate_Property_Details__c/fields/LLC_BI__Foundation_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Foundation_Type__c</fullName>
    <description>Users or an integration manually populate this picklist field to identify a property’s foundation type for the real estate collateral record.</description>
    <inlineHelpText>Select the property’s foundation type from the picklist.</inlineHelpText>
    <label>Foundation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basement</fullName>
            </value>
            <value>
                <fullName>Crawlspace</fullName>
            </value>
            <value>
                <fullName>Pier and Beam</fullName>
            </value>
            <value>
                <fullName>Slab</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>