force-app/main/default/objects/LLC_BI__Real_Estate_Property_Details__c/fields/LLC_BI__Garage_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Garage_Type__c</fullName>
    <description>Users or an integration manually populate this picklist field to identify a property’s garage type for the real estate collateral record.</description>
    <inlineHelpText>Select the property’s garage type from the picklist.</inlineHelpText>
    <label>Garage Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attached</fullName>
            </value>
            <value>
                <fullName>Basement</fullName>
            </value>
            <value>
                <fullName>Built-In</fullName>
            </value>
            <value>
                <fullName>Carport</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>