force-app/main/default/objects/LLC_BI__Real_Estate_Property_Details__c/fields/LLC_BI__Other_Property_Features__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Other_Property_Features__c</fullName>
    <description>Users or an integration manually populate this multi-select picklist to identify a property’s included features for a real estate property record.</description>
    <inlineHelpText>Select the extra features included with the property from the picklist. You can select more than one.</inlineHelpText>
    <label>Other Property Features</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basement</fullName>
            </value>
            <value>
                <fullName>Chimney</fullName>
            </value>
            <value>
                <fullName>Swimming Pool</fullName>
            </value>
            <value>
                <fullName>Elevator/Lift</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>