force-app/main/default/objects/LLC_BI__Real_Estate_Property_Details__c/fields/LLC_BI__Primary_Use__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Primary_Use__c</fullName>
    <description>Users or an integration manually populate this field to determine the real estate collateral’s primary use for a real estate collateral record.</description>
    <inlineHelpText>Select the property’s primary use from the picklist.</inlineHelpText>
    <label>Primary Use</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary Residence</fullName>
            </value>
            <value>
                <fullName>Second Home</fullName>
            </value>
            <value>
                <fullName>Holiday Home</fullName>
            </value>
            <value>
                <fullName>Sitting Tenant</fullName>
            </value>
            <value>
                <fullName>Live Work Unit</fullName>
            </value>
            <value>
                <fullName>Holiday Let</fullName>
            </value>
            <value>
                <fullName>To Let</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>