force-app/main/default/objects/LLC_BI__Real_Estate_Property_Details__c/fields/LLC_BI__Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Purchase_Date__c</fullName>
    <description>Users or an integration manually populate this date field to capture a property’s purchase date for for the real estate collateral record.</description>
    <inlineHelpText>Enter the property’s purchase date in this field.</inlineHelpText>
    <label>Purchase Date</label>
    <type>Date</type>
</CustomField>