force-app/main/default/objects/LLC_BI__Real_Estate_Property_Details__c/fields/LLC_BI__Roof_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Roof_Type__c</fullName>
    <description>Users or an integration manually populate this picklist to identify a property’s roof type for the real estate collateral record.</description>
    <inlineHelpText>Select the property’s roof type from the picklist.</inlineHelpText>
    <label>Roof Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solar Tiles</fullName>
            </value>
            <value>
                <fullName>Asphalt Shingles</fullName>
            </value>
            <value>
                <fullName>Metal Roofing</fullName>
            </value>
            <value>
                <fullName>Stone-coated Steel</fullName>
            </value>
            <value>
                <fullName>Slate</fullName>
            </value>
            <value>
                <fullName>Rubber Slate</fullName>
            </value>
            <value>
                <fullName>Clay and Concrete Tiles</fullName>
            </value>
            <value>
                <fullName>Green Roof</fullName>
            </value>
            <value>
                <fullName>Built-up Roofing</fullName>
            </value>
            <value>
                <fullName>Flat</fullName>
            </value>
            <value>
                <fullName>Thatched</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>